--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -2,9 +2,10 @@ name: Mirror to GitLab and Bitbucket
 
 on:
   push:
-    branches: [main]
+    branches: [main, master]
     tags:
       - 'v*'
+  workflow_dispatch:
 
 jobs:
   mirror-gitlab:
@@ -20,9 +21,10 @@ jobs:
       - name: Push to GitLab
         env:
           GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
+          REPO_NAME: ${{ github.event.repository.name }}
         run: |
-          git remote add gitlab https://oauth2:${GITLAB_TOKEN}@gitlab.com/hyperpolymath/affinescript.git || true
-          git push gitlab main --force
+          git remote add gitlab https://oauth2:${GITLAB_TOKEN}@gitlab.com/hyperpolymath/${REPO_NAME}.git || true
+          git push gitlab HEAD:main --force || git push gitlab HEAD:master --force
           git push gitlab --tags --force
 
   mirror-bitbucket:
@@ -38,7 +40,8 @@ jobs:
       - name: Push to Bitbucket
         env:
           BITBUCKET_TOKEN: ${{ secrets.BITBUCKET_TOKEN }}
+          REPO_NAME: ${{ github.event.repository.name }}
         run: |
-          git remote add bitbucket https://x-token-auth:${BITBUCKET_TOKEN}@bitbucket.org/hyperpolymath/affinescript.git || true
-          git push bitbucket main --force
+          git remote add bitbucket https://x-token-auth:${BITBUCKET_TOKEN}@bitbucket.org/hyperpolymath/${REPO_NAME}.git || true
+          git push bitbucket HEAD:main --force || git push bitbucket HEAD:master --force
           git push bitbucket --tags --force
