--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,79 @@
-# OCaml / Dune
-_build/
-_opam/
-*.install
-*.merlin
-.merlin
-*.byte
-*.native
-*.cmo
-*.cmi
-*.cma
-*.cmx
-*.cmxa
-*.cmxs
-*.o
-*.a
+# SPDX-License-Identifier: AGPL-3.0-or-later
+# RSR-compliant .gitignore
 
-# Editor
-*~
-\#*\#
-.#*
-*.swp
-*.swo
-.vscode/
-.idea/
-*.sublime-*
-
-# OS
+# OS & Editor
 .DS_Store
 Thumbs.db
+*.swp
+*.swo
+*~
+.idea/
+.vscode/
 
-# Local
+# Build
+/target/
+/_build/
+/build/
+/dist/
+/out/
+
+# Dependencies
+/node_modules/
+/vendor/
+/deps/
+/.elixir_ls/
+
+# Rust
+# Cargo.lock  # Keep for binaries
+
+# Elixir
+/cover/
+/doc/
+*.ez
+erl_crash.dump
+
+# Julia
+*.jl.cov
+*.jl.mem
+/Manifest.toml
+
+# ReScript
+/lib/bs/
+/.bsb.lock
+
+# Python (SaltStack only)
+__pycache__/
+*.py[cod]
+.venv/
+
+# Ada/SPARK
+*.ali
+/obj/
+/bin/
+
+# Haskell
+/.stack-work/
+/dist-newstyle/
+
+# Chapel
+*.chpl.tmp.*
+
+# Secrets
 .env
-.envrc
-.direnv/
+.env.*
+*.pem
+*.key
+secrets/
 
-# Test artifacts
-_coverage/
-*.coverage
+# Test/Coverage
+/coverage/
+htmlcov/
 
-# Build outputs
-affinescript.opam
+# Logs
+*.log
+/logs/
+
+# Temp
+/tmp/
+*.tmp
+*.bak
