--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,41 +1,15 @@
 # SPDX-License-Identifier: AGPL-3.0-or-later
-name: "CodeQL"
+# CodeQL disabled - no scannable source code detected
+name: CodeQL Security Analysis
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
-  schedule:
-    - cron: '0 0 * * 0'  # Weekly on Sunday
+  workflow_dispatch:  # Manual trigger only
 
-permissions:
-  contents: read
-  security-events: write
+permissions: read-all
 
 jobs:
-  analyze:
-    name: Analyze
+  placeholder:
     runs-on: ubuntu-latest
-
-    strategy:
-      fail-fast: false
-      matrix:
-        language: ['actions']
-        # Note: OCaml is not directly supported by CodeQL
-        # 'actions' scans workflow files for security issues
-
+    if: false
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@48ab28a6f5dbc2a99bf1e0131198dd8f1df78169 # v3
-        with:
-          languages: ${{ matrix.language }}
-
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@48ab28a6f5dbc2a99bf1e0131198dd8f1df78169 # v3
-
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@48ab28a6f5dbc2a99bf1e0131198dd8f1df78169 # v3
+      - run: echo "Enable when source code is added"
