--- a/tools/affine-pkg/Cargo.toml
+++ b/tools/affine-pkg/Cargo.toml
@@ -1,4 +1,4 @@
-# SPDX-License-Identifier: Apache-2.0 OR MIT
+# SPDX-License-Identifier: PMPL-1.0-or-later
 # Copyright 2024 AffineScript Contributors
 
 [package]
