--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,11 @@ jobs:
         with:
           ocaml-compiler: "5.1"
 
+      - name: Set up Node.js
+        uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4
+        with:
+          node-version: "20"
+
       - name: Install dependencies
         run: opam install . --deps-only --with-test --with-doc
 
@@ -31,6 +36,9 @@ jobs:
 
       - name: Run tests
         run: opam exec -- dune runtest
+
+      - name: Run codegen WASM tests
+        run: opam exec -- ./tools/run_codegen_wasm_tests.sh
 
       - name: Check formatting
         run: opam exec -- dune build @fmt
